# XcodeMigrate

./: .gitignore  .swiftformat  .swiftlint.yml  LICENSE  Package.resolved  Package.swift  README.md
.github/workflows/: swift.yml
Sources/BazelGen/: BazelGen.swift
Sources/BazelGenerator/: BazelGenerator.swift  CreateBuildFileOperation.swift  GeneratorConfig.swift
Sources/BazelGenerator/GeneratedBazelTarget/: GeneratedBazelTarget.swift
Sources/BazelGenerator/Rules/: BazelRule+DeviceFamily.swift  BazelRule+Rendering.swift  BazelRule.swift  BazelRuleSet.swift  RuleGenerable.swift
Sources/BazelGenerator/XcodeAbstractionExtensions/: AbstractTarget+BazelGen.swift  AbstractTarget+TargetSourceSwift.swift  AbstractTarget+UnitTest.swift
Sources/BazelKit/: BazelRuleRepresentable.swift  Rule.swift
Sources/BazelKit/AttributeContentConvertible/: Array+AttributeContentConvertible.swift  AttributeContentConvertible.swift  String+AttributeContentConvertible.swift
Sources/BazelRenderingKit/: Rule.swift
Sources/BazelRenderingKit/AttributeContentConvertible/: Array+AttributeContentConvertible.swift  AttributeContentConvertible.swift  Dictionary+AttributeContentConvertible.swift  String+AttributeContentConvertible.swift
Sources/Common/: CommonLogHandler.swift  Logger.swift
Sources/Common/Configuration/: Configuration.swift  ParserConfiguration.swift
Sources/Common/PathKitExtensions/: PathKit+RelativePath.swift
Sources/FoundationExtension/: String+Extensions.swift  StringProtocol+Index.swift
Sources/XcodeAbstraction/: AbstractProject.swift  AbstractSourceFile.swift  AbstractTarget.swift
Sources/XcodeAbstraction/BuildSetting/: DeploymentTarget.swift  TargetDevice.swift
Sources/XcodeAbstraction/ShadowType/: ProductType.swift
Sources/XcodeMigrate/: XcodeMigrate.swift
Sources/XcodeParser/: XcodeParser.swift
Sources/XcodeParser/Model/: AbstractProject.swift  AbstractTarget+FindRootPath.swift  AbstractTarget+NativeTarget.swift  AbstractTarget.swift  ProductType+PBXProductType.swift
Sources/XcodeParser/XcodeProjExtensions/: AbstractSourceFile+FileElement.swift  PBXFileElement+FilePath.swift
Tests/BazelGenTests/: BazelGenTests.swift
Tests/BazelGeneratorTests/: AbstractTarget+BazelGenTests.swift  AbstractTargetPlusBazelGenTests.swift  BazelGeneratorTests.swift
Tests/BazelGeneratorTests/XcodeAbstractionExtensions/: AbstractTargetPlusUnitTestTests.swift  CreateBuildFileOperation+TestHelpers.swift
Tests/BazelKitTests/: BazelKitTests.swift  RuleTests.swift
Tests/BazelRenderingKitTests/: RuleTests.swift
Tests/CommonTests/: ConfigurationTests.swift
Tests/CommonTests/PathKitExtensions/: PathKitAndRelativePathTests.swift
Tests/TestSupport/: SwiftProjectPath.swift
Tests/XcodeMigrateTests/: XcodeMigrateTests.swift
Tests/XcodeParserTests/: XcodeParserTests.swift
Tests/XcodeParserTests/TestSupport/: SwiftProjectPath.swift
fixtures/: Makefile
fixtures/basic/: .gitignore  BUILD.bazel  Project.swift  WORKSPACE
fixtures/basic/Derived/InfoPlists/: BUILD.bazel
fixtures/basic/Plugins/BasicFixtureProject/: Plugin.swift
fixtures/basic/Plugins/BasicFixtureProject/ProjectDescriptionHelpers/: LocalHelper.swift
fixtures/basic/Plugins/BasicFixtureProject/Sources/tuist-my-cli/: main.swift
fixtures/basic/Targets/BasicFixtureProject/Sources/: AppDelegate.swift
fixtures/basic/Targets/BasicFixtureProject/Tests/: AppTests.swift  BUILD.bazel
fixtures/basic/Targets/BasicFixtureProjectKit/: BUILD.bazel
fixtures/basic/Targets/BasicFixtureProjectKit/Sources/: BUILD.bazel  BasicFixtureProjectKit.swift
fixtures/basic/Targets/BasicFixtureProjectKit/Tests/: BUILD.bazel  BasicFixtureProjectKitTests.swift
fixtures/basic/Targets/BasicFixtureProjectUI/: BUILD.bazel
fixtures/basic/Targets/BasicFixtureProjectUI/Sources/: BasicFixtureProjectUI.swift
fixtures/basic/Targets/BasicFixtureProjectUI/Tests/: BUILD.bazel  BasicFixtureProjectUITests.swift
fixtures/basic/Tuist/: Config.swift
fixtures/basic/Tuist/ProjectDescriptionHelpers/: Project+Templates.swift
misc/: project_structure.txt
