load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application")
load("@build_bazel_rules_apple//apple:ios.bzl", "ios_framework")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

ios_application(
    name = "BasicFixtureProject",
    bundle_id = "io.tuist.BasicFixtureProject",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["//Derived/InfoPlists:BasicFixtureProject_InfoPlist"],
    minimum_os_version = "13.0",
    resources = ["Targets/BasicFixtureProject/Resources/LaunchScreen.storyboard"],
    deps = [
        ":BasicFixtureProjectUI",
        ":BasicFixtureProject_source",
        "//Targets/BasicFixtureProjectKit",
    ],
)

swift_library(
    name = "BasicFixtureProject_source",
    srcs = [
        "Derived/Sources/TuistBundle+BasicFixtureProject.swift",
        "Targets/BasicFixtureProject/Sources/AppDelegate.swift",
    ],
    module_name = "BasicFixtureProject",
    visibility = ["//visibility:public"],
    deps = [
        ":BasicFixtureProjectUI_lib",
        "//Targets/BasicFixtureProjectKit:BasicFixtureProjectKit_lib",
    ],
)

ios_framework(
    name = "BasicFixtureProjectUI",
    bundle_id = "io.tuist.BasicFixtureProjectUI",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["//Derived/InfoPlists:BasicFixtureProjectUI_InfoPlist"],
    minimum_os_version = "13.0",
    resources = ["Targets/BasicFixtureProjectUI/Resources/index.html"],
    visibility = ["//visibility:public"],
    deps = [":BasicFixtureProjectUI_lib"],
)

swift_library(
    name = "BasicFixtureProjectUI_lib",
    srcs = [
        "Derived/Sources/TuistBundle+BasicFixtureProjectUI.swift",
        "Targets/BasicFixtureProjectUI/Sources/BasicFixtureProjectUI.swift",
    ],
    module_name = "BasicFixtureProjectUI",
    visibility = ["//visibility:public"],
    deps = [],
)
