load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@build_bazel_rules_apple//apple:ios.bzl", "ios_framework")

swift_library(
    name = "BasicFixtureProjectKit_lib",
    srcs = ["Sources/BasicFixtureProjectKit.swift"],
    module_name = "BasicFixtureProjectKit",
    visibility = ["//visibility:public"],
    deps = [],
)

ios_framework(
    name = "BasicFixtureProjectKit",
    bundle_id = "io.tuist.BasicFixtureProjectKit",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["//Derived/InfoPlists:BasicFixtureProjectKit_InfoPlist"],
    minimum_os_version = "13.0",
    visibility = ["//visibility:public"],
    deps = [":BasicFixtureProjectKit_lib"],
)
