load("@build_bazel_rules_apple//apple:ios.bzl", "ios_framework")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

ios_framework(
    name = "BasicFixtureProjectUI",
    bundle_id = "io.tuist.BasicFixtureProjectUI",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["//Derived/InfoPlists:BasicFixtureProjectUI_InfoPlist"],
    minimum_os_version = "13.0",
    resources = [],
    visibility = ["//visibility:public"],
    deps = [":BasicFixtureProjectUI_lib"],
)

swift_library(
    name = "BasicFixtureProjectUI_lib",
    srcs = ["Sources/BasicFixtureProjectUI.swift"],
    module_name = "BasicFixtureProjectUI",
    visibility = ["//visibility:public"],
    deps = [],
)
