load("@build_bazel_rules_apple//apple:ios.bzl", "ios_unit_test")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_test")

ios_unit_test(
    name = "BasicFixtureProjectTests",
    data = [],
    env = {},
    minimum_os_version = "13.0",
    platform_type = "iphone",
    deps = [":BasicFixtureProjectTests_source"],
)

swift_test(
    name = "BasicFixtureProjectTests_source",
    srcs = ["AppTests.swift"],
    module_name = "BasicFixtureProjectTests",
    visibility = ["//visibility:public"],
    deps = ["//:BasicFixtureProject_lib"],
)
